--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,12 +5,12 @@ plugins {
 
 android {
     namespace 'com.example.memcardpro'
-    compileSdk = 33
+    compileSdk = 34
 
     defaultConfig {
         applicationId "com.example.memcardpro"
-        minSdk 21
-        targetSdk 33
+        minSdk 28
+        targetSdkVersion 34
         versionCode 1
         versionName "1.0"
 
@@ -33,21 +33,47 @@ android {
     buildFeatures {
         viewBinding true
     }
+    buildToolsVersion '34.0.0'
 }
 
 
 dependencies {
 
-    implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.5.1'
-    implementation 'com.google.android.material:material:1.6.1'
+    implementation 'androidx.core:core-ktx:1.12.0'
+    implementation 'androidx.appcompat:appcompat:1.6.1'
+    implementation 'com.google.android.material:material:1.10.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.1'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.1'
-    implementation 'androidx.navigation:navigation-fragment-ktx:2.5.2'
-    implementation 'androidx.navigation:navigation-ui-ktx:2.5.2'
-    implementation 'androidx.preference:preference:1.1.1'
+    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.6.2'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.6.2'
+    implementation 'androidx.navigation:navigation-fragment-ktx:2.7.4'
+    implementation 'androidx.navigation:navigation-ui-ktx:2.7.4'
+    implementation 'androidx.preference:preference-ktx:1.2.1'
+    implementation 'com.android.car.ui:car-ui-lib:2.5.1'
+    implementation 'androidx.mediarouter:mediarouter:1.6.0'
+    implementation 'androidx.activity:activity-ktx:1.8.0'
+    implementation 'androidx.compose.animation:animation:1.5.4'
+    implementation 'androidx.compose.compiler:compiler:1.5.3'
+    implementation 'androidx.compose.foundation:foundation:1.5.4'
+    implementation 'androidx.compose.material:material:1.5.4'
+    implementation 'androidx.compose.runtime:runtime:1.5.4'
+    implementation 'androidx.compose.ui:ui:1.5.4'
+    implementation 'androidx.fragment:fragment-ktx:1.6.1'
+    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.2'
+    implementation 'androidx.navigation:navigation-compose:2.7.4'
+    implementation 'androidx.recyclerview:recyclerview:1.3.2'
+    implementation 'androidx.room:room-ktx:2.6.0'
+    implementation 'androidx.sqlite:sqlite-ktx:2.4.0'
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
+    implementation 'com.google.android.gms:play-services-maps:18.2.0'
+    implementation 'androidx.browser:browser-ktx:1.5.0'
+    implementation 'androidx.compose.material3:material3:1.2.0'
+    implementation 'androidx.lifecycle:lifecycle-common-ktx:2.6.2'
+    implementation 'androidx.preference:preference-compose:1.2.1'
+    implementation 'com.google.android.gms:play-services-places:18.0.0'
     testImplementation 'junit:junit:4.13.2'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+
+
+
 }
